--- a/templates/create_fabric_hostvar_files.j2
+++ b/templates/create_fabric_hostvar_files.j2
@@ -252,7 +252,7 @@ os10_interface:
 {% endif -%}
 
 {% if role == 'leaf' %}
-  virtual-network {{ mgtvlan }}{{ mgtvlan }}:
+  virtual-network 10{{ mgtvlan }}:
     vrf: {{ L3vrf }}
     ip_and_mask: {{ mgtnet }}.{{ switchnr }}/{{ mgtmask }}
     virtual_gateway_ip: "{{ mgtnet }}.{{ mgtgw }}"
